[gd_scene load_steps=5 format=3 uid="uid://c4ut1nsfsdlq0"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/controls/drag-and-drop/simple-drag-and-drop/simple-drag-and-drop.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cldqg0dmn3o1f" path="res://scenes/toolbox/examples/root/2d/controls/drag-and-drop/simple-drag-and-drop/draggable-node/draggable-node.tscn" id="2"]
[ext_resource type="Theme" uid="uid://ccr2k4swymel8" path="res://assets/themes/default_button_theme.tres" id="2_544lx"]
[ext_resource type="PackedScene" uid="uid://dc41l72k3ujh7" path="res://scenes/toolbox/examples/root/2d/controls/drag-and-drop/simple-drag-and-drop/drop-zone/drop-zone.tscn" id="3"]

[node name="SimpleDragAndDrop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 1017.0
offset_bottom = 105.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="InstructionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "- Drag the shapes to their coorespending drop boxes.
- Try invalid drops.
"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 80.0
offset_right = 147.0
offset_bottom = 112.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_544lx")
text = "Restart"

[node name="CircleDropZone" parent="." instance=ExtResource("3")]
layout_mode = 0
offset_left = 439.0
offset_top = 154.0
offset_right = 695.0
offset_bottom = 410.0
_dropType = "circle"

[node name="TriangleDropZone" parent="." instance=ExtResource("3")]
layout_mode = 0
offset_left = 89.0
offset_top = 307.0
offset_right = 345.0
offset_bottom = 563.0
_dropType = "triangle"

[node name="DraggableNode" parent="." instance=ExtResource("2")]
offset_left = 111.0
offset_top = 122.0
offset_right = 239.0
offset_bottom = 250.0

[node name="DraggableNode2" parent="." instance=ExtResource("2")]
offset_left = 291.0
offset_top = 145.0
offset_right = 419.0
offset_bottom = 273.0
_nodeType = "circle"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
